<resources>
    <string name="_00_00_00">00:00:00</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="add_custom">Add Custom</string>
    <string name="add_routes">Adding routes</string>
    <string name="add_server">Add Server</string>
    <string name="add_tweaks">Add Tweaks</string>
    <string name="america">America</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_mobile_info">Application version: %1$s %2$s</string>
    <string name="app_name">FBD VPN PRO</string>
    <string name="app_network">Export Network</string>
    <string name="app_server">Export Server</string>
    <string name="app_store_text">App Store</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_version">null</string>
    <string name="app_version_4_1_6">App Version: 4.1.6</string>
    <string name="app_widget_name">Switch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_link">Application link</string>
    <string name="apply">Apply</string>
    <string name="asset_geo_files_sources">Geo files source (optional)</string>
    <string name="assign_ip">Connecting</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auto_keyboard_summary">Automatically raise/dismiss soft keyboard</string>
    <string name="auto_keyboard_title">Auto Keyboard</string>
    <string name="autologin_suffix">/autologin</string>
    <string name="autostart_finish_on_connect_summary">When VPN connection is launched from a shortcut or automatically on reboot, and no user input is required to authenticate connection, minimize the app after VPN connects.</string>
    <string name="autostart_finish_on_connect_title">Shortcut Minimize</string>
    <string name="autostart_summary">If a VPN connection is active on device shutdown, try to reconnect it on reboot</string>
    <string name="autostart_title">Reconnect on reboot</string>
    <string name="back">Back</string>
    <string name="banner">ca-app-pub-5292624861185525/2382706164</string>
    <string name="best_performance">Auto Random</string>
    <string name="bits_per_second">%.0f bit/s</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="building_configration">Building configuration…</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="cert_profile_insecure_summary">Enable support for MD5 signatures of X509 certificates. Note that MD5 is broken and should not be used</string>
    <string name="cert_profile_insecure_title">Use insecure algorithms</string>
    <string name="cert_verify_fail">Server certificate verification failed</string>
    <string name="certificate">Certificate</string>
    <string name="channel_description">VPN notifications</string>
    <string name="channel_description_background">Ongoing statistics of the established SSH connection</string>
    <string name="channel_description_service_ssh">Notification for if using Connect Option</string>
    <string name="channel_description_status">Connection state changes (connecting, authenticating, …)</string>
    <string name="channel_description_userreq">Connection requires user input, for example two factor authentication</string>
    <string name="channel_name">@string/app_name</string>
    <string name="channel_name_background">Connection statistics</string>
    <string name="channel_name_service_ssh">Connect Option Service</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_name_userreq">User interaction required</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_updates">Check Updates</string>
    <string name="china">China</string>
    <string name="choose_your_favorite_color">Choose your favorite color</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_logs">Clear logs</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client_halt">VPN was halted by server</string>
    <string name="client_restart">VPN was restarted by server</string>
    <string name="close_vpn">Close VPN and re-open the app to continue.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compression_summary">Tunnel compression options</string>
    <string name="compression_title">Compression</string>
    <string name="config_file_parse_error">Error parsing VPN configuration file</string>
    <string name="conn_timeout_summary">How long should VPN try to connect before giving up?</string>
    <string name="conn_timeout_title">Connection Timeout</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connection_connected">Connected, tap to check connection</string>
    <string name="connection_not_connected">Not connected</string>
    <string name="connection_test_available">Success: Connection took %dms</string>
    <string name="connection_test_error">Fail to detect internet connection: %s</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_pending" />
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_testing_count">Testing %d configurations…</string>
    <string name="connection_timeout">VPN Connection Timeout</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="export_network">Export Network</string>
    <string name="export_server">Export Server</string>
    <string name="file_dialog_cancel">Cancel</string>
    <string name="file_dialog_create">Save</string>
    <string name="file_dialog_file_name">File name:</string>
    <string name="file_dialog_new">New</string>
    <string name="file_dialog_no_data">No Data</string>
    <string name="file_dialog_select">Select</string>
    <string name="paste_network">Import Network</string>
    <string name="paste_server">Import Server</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="title_about">About</string>
    <string name="update_check_for_update">Check for update</string>
    <string name="update_check_pre_release">Check Pre-release</string>
</resources>