<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_file_import"
        android:id="@+id/network_import"
        android:title="@string/paste_network"
        android:titleCondensed="Paste Import"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:icon="@drawable/ic_file_import"
        android:id="@+id/server_import"
        android:title="@string/paste_server"
        android:titleCondensed="Paste Import"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:icon="@drawable/ic_file_export"
        android:id="@+id/nav_server_export"
        android:title="@string/export_server"
        android:titleCondensed="Export"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:icon="@drawable/ic_file_export"
        android:id="@+id/nav_network_export"
        android:title="@string/export_network"
        android:titleCondensed="Export"
        app:showAsAction="withText|ifRoom"/>
</menu>
