<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_spacing_dp16">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_stream_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_security"/>
        <Spinner
            android:entries="@array/streamsecurityxs"
            android:id="@+id/sp_stream_security"
            android:nextFocusDown="@+id/et_sni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_sni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_sni"/>
        <EditText
            android:id="@+id/et_sni"
            android:nextFocusDown="@+id/sp_stream_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_stream_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_fingerprint"/>
        <Spinner
            android:entries="@array/streamsecurity_utls"
            android:id="@+id/sp_stream_fingerprint"
            android:nextFocusDown="@+id/sp_stream_alpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_stream_alpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_alpn"/>
        <Spinner
            android:entries="@array/streamsecurity_alpn"
            android:id="@+id/sp_stream_alpn"
            android:nextFocusDown="@+id/sp_allow_insecure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_allow_insecure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_allow_insecure"/>
        <Spinner
            android:entries="@array/allowinsecures"
            android:id="@+id/sp_allow_insecure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_public_key"/>
        <EditText
            android:id="@+id/et_public_key"
            android:nextFocusDown="@+id/sp_stream_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_short_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_short_id"/>
        <EditText
            android:id="@+id/et_short_id"
            android:nextFocusDown="@+id/sp_stream_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lay_spider_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_spider_x"/>
        <EditText
            android:id="@+id/et_spider_x"
            android:nextFocusDown="@+id/sp_stream_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>
</LinearLayout>
