<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/padding_spacing_dp16"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/image_size_dp24"
                android:layout_height="@dimen/image_size_dp24"
                app:srcCompat="@drawable/ic_source_code_24dp"/>
            <androidx.appcompat.widget.SwitchCompat
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorAccent"
                android:id="@+id/check_pre_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_check_pre_release"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_spacing_dp16"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:id="@+id/layout_check_update"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/padding_spacing_dp16"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/image_size_dp24"
                android:layout_height="@dimen/image_size_dp24"
                app:srcCompat="@drawable/ic_check_update_24dp"/>
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_check_for_update"
                android:paddingStart="@dimen/padding_spacing_dp16"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_spacing_dp16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
